Add dual-license; set up project structure; update metadata
Dual-licensed project under both MIT and Apache-2.0. Updated metadata (and README badges). Set up barebones project structures in src/ with lib.rs, compress.rs, and io.rs.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,8 @@ name = "svdimagecompress"
 version = "0.1.0-dev"
 authors = ["Luis M. B. Varona <lbvarona@mta.ca>"]
 edition = "2024"
+description = "TODO"
+license = "MIT OR Apache-2.0"
 repository = "https://github.com/Luis-Varona/svdimagecompress-rs"
 
 [dependencies]
