--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,10 +3,12 @@ name = "svdimagecompress"
 version = "0.1.0-dev"
 authors = ["Luis M. B. Varona <lbvarona@mta.ca>"]
 edition = "2024"
-description = "TODO"
+description = "A Rust toolbox for SVD image compression, capable of producing both the best and the worst (for fun!) possible approximations."
 license = "MIT OR Apache-2.0"
 repository = "https://github.com/Luis-Varona/svdimagecompress-rs"
 
 [dependencies]
-faer = "0.21.9"
+faer-core = "0.17.1"
+faer-svd = "0.17.1"
 image = "0.25.6"
+rayon = "1.10.0"
